# cbook

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  aCMakePresets.json  build.sh  build_android.sh  cmake-variants.yaml  conanfile.py  conanfile.txt  log2  packlog  vcpkg.json
.github/: copilot-instructions.md
cmake/: gflag-2.2.2.cmake  googletest.cmake  rapidjson.cmake
common/: CMakeLists.txt  md5.cpp
common/video/: box
doc/: 优秀开源工程.docx
example/: demo.cpp  launch.txt
features/common/: CMakeLists.txt  md5.cpp  md5.h  println-t  println-t.c  println.h
features/mathfunctions/: README.md
features/server/: CMakeLists.txt  asio_client_async.cpp  asio_client_test.cpp  asio_server_async.cpp  http_examples.cpp
features/server/api/: jsons.cpp  jsons.h  login.cpp  login.h  match.h  strings.h  works.cpp
features/server/assets/: json01.json
features/server/utils/: web_server_utility.h
features/server/web/: index.cpp  index.h  info.cpp  info.h
ffmpeg/: android_build.sh
ffmpeg/videos/: README.md  moovchange.sh  videos.json
include/: README.md  book.h  file.h
jnitest/: CMakeLists.txt
jnitest/01/: HelloWorld.h
lib/ffmpeg/videos/: box.cpp  info.py
lib/imgui_backends/: CMakeLists.txt  imgui_backends.h
lib/json11/: CMakeLists.txt  json11.cpp
lib/server/: .gitignore  CMakeLists.txt
lib/server/tests/http/: string.http
libs/: README.md
libs/ffmpeg/: moovchange.sh
libs/server/: CMakeLists.txt
mathfunctions/: CMakeLists.txt  mathfunctions.cpp  mathfunctions.h
samples/: 1.clang-format  11conanfile.txt  1cmake-variant.json  README.md  build.sh  build_android.sh  tasks.txt
samples/cmake/: gflag-2.2.2.cmake  googletest.cmake
samples/jni/jnitest/: CMakeLists.txt  corendk.cpp
samples/learn/: initialize.cpp  lambda  onlynew.cpp  onlystack.cpp  operator.cpp  struct.c
samples/learn/adapter/: queue.cpp  stack.cpp
samples/learn/algorithm/: regex.cpp  sort  sort.cpp
samples/learn/containers/: deques  list.cpp  set  set.cpp  three.cpp  vectors
samples/learn/designmode/: behavioral-command.cpp  behavioral-interpreter  behavioral-iterator  behavioral-memento.cpp  behavioral-observer  behavioral-observer.cpp  behavioral-visitor.cpp  creation-builder.cpp  creation-factoryabstract.cpp  creation-prototype.cpp  creation-singleton.cpp  structural-adapter1  structural-adapter1.cpp  structural-bridge  (+7 more)
samples/old/: cmake-variants.yaml
samples/scripts/: README.md  mp4dump  mp4info
samples/toolchain/: README.md  android.cmake
samples/video/: box.cpp
scripts/: README.md  build.sh  case.py  info.py  qbs.py
server/: CMakeLists.txt  asio_client_test.cpp  asio_server_test.cpp  http_examples.cpp
server/api/: jsons.cpp  jsons.h  login.h  match.cpp  signup.cpp  signup.h  strings.cpp  works.h
server/api/model/: Person.cpp
server/assets/: json01.json
server/utils/: json_object.h  web_server_utility.h
src/: Application.hpp  README.md  app.h  book.cpp  book.h  books.cpp  books.h  main.cpp  mainwindow.cpp  mainwindow.h  test.h
test/: CMakeLists.txt  README.md
test/book/: unittest.cpp
test/common/: md5_unittest.cpp
test/fuzzers/: README.md  http_json_req.cpp
test/jnitest/: JNITest.h
test/jnitest/01/: HelloWorld.cpp
test/json/: json-test.cpp
test/json11/: json_unittest.cpp
test/learn/: initialize  lambda.cpp  lstring.cpp  test1.cpp  thread-atomic  thread-atomic.cpp  thread-atomic1  thread-atomic1.cpp  thread-cpp.cpp  thread-cpp1  thread-cpp2.cpp  thread-future  thread-p1.cpp
test/learn/adapter/: func  func.cpp  stack.cpp
test/learn/algorithm/: foreach.cpp  sort  sort.cpp
test/learn/containers/: arrays  arrays.cpp  deques  deques.cpp  list  list.cpp  maps.cpp  vectors.cpp
test/learn/designmode/: README.md  UML.drawio  behavioral-chain-of-responsibility  behavioral-chain-of-responsibility.cpp  behavioral-chain-of-responsibility.drawio  behavioral-command  behavioral-command.drawio  behavioral-interpreter.cpp  behavioral-interpreter.drawio  behavioral-iterator.cpp  behavioral-iterator.drawio  behavioral-memento  behavioral-memento.drawio  behavioral-observer.drawio  behavioral-strategy  behavioral-strategy.cpp  behavioral-strategy.drawio  behavioral-template  behavioral-template.cpp  behavioral-template.drawio  behavioral-visitor  behavioral-visitor.drawio  creation-builder.drawio  creation-factory.cpp  creation-factory.drawio  creation-factoryabstract.drawio  creation-prototype.drawio  creation-singleton.drawio  structural-adapter  structural-adapter.cpp  structural-adapter.drawio  structural-bridge.drawio  structural-composite.drawio  structural-decorator.cpp  structural-decorator.drawio  structural-facade.drawio  structural-flyweight  structural-flyweight.drawio  structural-proxy  structural-proxy.drawio
test/learn/designmode/behavioral-command.out.dSYM/Contents/: Info.plist
test/learn/designmode/behavioral-mediator/: behavioral-mediator.drawio  colleague.cpp  colleague.h  concrete_colleague.h  mediator.h
test/learn/designmode/behavioral-mediator/behavioral-mediator.out.dSYM/Contents/: Info.plist
test/learn/designmode/behavioral-state/: behavioral-state.drawio  state.h  state_can_raffle.cpp  state_dispense.cpp  state_dispense.h
test/learn/designmode/behavioral-state/behavioral-state.out.dSYM/Contents/: Info.plist
test/learn/functor/: functor  functor.cpp
test/learn/inc/: inc-tst.cpp  template_state.inc
test/learn/interface/: oop.cpp  test.cpp
test/learn/io/: person.text  test
test/learn/operator/: subscript  typecase.cpp
test/learn/operator/subscript.out.dSYM/Contents/: Info.plist
test/learn/ptr/: auto_ptr.cpp
test/learn/template/: alias-template.cpp  variadic  variadic.cpp  variadic2
test/learn/thread/: thread-cpp  thread-cpp1.cpp  thread-cpp2  thread-future.cpp  thread-future1  thread-p.cpp  thread-pool.cpp
test/learn/thread/thread_pool/: SafeQueue.h  ThreadPool.h
test/server/: CMakeLists.txt  asio_test.cpp
toolchain/: aarch64-linux.cmake  android.cmake
video/: moovchange.sh  mp4_moov_change.cpp  音视频流媒体高级开发课程-第六代大纲.html
(+43 files in other folders)
